Finish up Main Page and Sbemail Songs

--- a/Manual/HTML/Main Page.html
+++ b/Manual/HTML/Main Page.html
@@ -161,7 +161,7 @@
                 <tr><td></td></tr>
                 <tr><td></td></tr>
             </tbody></table>
-          <p>One of the bubbles will have one of these messages. Consider that bubble the first of the cycle. Take the color of each bubble as the column of the below table, and the main page number of the background as the row to get three main page buttons.</p>
+          <p>At one point, the bubble will have one of these messages. Consider that message the first of the cycle. Take the color of each bubble as the column of the below table, and the main page number of the background as the row to get three main page buttons.</p>
           <table style="text-align:center"><thead>
             <tr><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td></tr>
             </thead>
@@ -202,38 +202,37 @@
         </div>
         <div class="page-content">
           <h3>Example (rule seed 1):</h3>
-          <p>Note to self: replace with actual generated example once module development is complete</p>
           <ul>
-            <li>Colors: Blue, Red, Yellow</li>
-            <li>Messages: "new toon soon", "latest merch", "biz cas fri"</li>
-            <li>Background: 14</li>
-            <li>Homestar: 8</li>
-            <li>Toons: 13</li>
-            <li>Games: 5</li>
-            <li>Characters: 7</li>
-            <li>Downloads: 24</li>
-            <li>Store: 18</li>
-            <li>E-mail: 12</li>
-            <li>Initial encrypted message uses Toons, Email, and Downloads: MLX</li>
-            <li>Serial number: AR5AL7</li>
-            <li>Letters: ARL</li>
-            <li>Serial number rearrangement: ALR (second and third letter swapped)</li>
-            <li>Message rearrangement: MXL</li>
-            <li>Initial sequence of 18: QBTSSCIOOWSHSKYKKI</li>
-            <li>Skew left, green is not present</li>
-            <li>Squish: QIBKTKSYSKCSIHOSOW</li>
-            <li>Turn all around: Homestar has default voice lines, swap pairs</li>
-            <li>OWOSIHCSSKSYTKBKQI</li>
-            <li>Replace letters: OWPSIHCTUKVYXLBMQJ</li>
+            <li>Messages: "new strong bad email" (17 letters), "biz cas fri" (9 letters), "short shorts!" (11 letters)</li>
+            <li>Colors: Yellow, Green, Blue</li>
+            <li>Background: 22</li>
+            <li>Homestar: 13</li>
+            <li>Toons: 19</li>
+            <li>Games: 11</li>
+            <li>Characters: 15</li>
+            <li>Downloads: 26</li>
+            <li>Store: 5</li>
+            <li>E-mail: 17</li>
+            <li>Initial encrypted message uses Email, Games and Toons: QKS</li>
+            <li>Serial number: V59EG0</li>
+            <li>Letters in serial number: VEG</li>
+            <li>Serial number alphabetical rearrangement: EGV (first letter moved to end)</li>
+            <li>Message rearrangement: KSQ</li>
+            <li>Initial sequence of 18: PBC GOS SSC VRS PXL QIK</li>
+            <li>Skew left, yellow is present</li>
+            <li>Squish: PKBICQGLOXSPSSSRCV</li>
+            <li>Turn all around (Homestar does not have default voice lines, reverse string): VCRSSSPSXOLGQCIBKP</li>
+            <li>Replace letters: VCRSTUPWXOLGQDIBKY</li>
+            <li>Table:</li>
           </ul>
           <table><tbody>
-            <tr><td>O</td><td>W</td><td>P</td><td>S</td><td>I</td><td>H</td><td>C</td><td>T</td><td>U</td><td>K</td><td>V</td><td>Y</td><td>X</td></tr>
-            <tr><td>L</td><td>B</td><td>M</td><td>Q</td><td>J</td><td>A</td><td>D</td><td>E</td><td>F</td><td>G</td><td>N</td><td>R</td><td>Z</td></tr>
+            <tr><td>V</td><td>C</td><td>R</td><td>S</td><td>T</td><td>U</td><td>P</td><td>W</td><td>X</td><td>O</td><td>L</td><td>G</td><td>Q</td></tr>
+            <tr><td>D</td><td>I</td><td>B</td><td>K</td><td>Y</td><td>A</td><td>E</td><td>F</td><td>H</td><td>J</td><td>M</td><td>N</td><td>Z</td></tr>
           </tbody></table>
           <ul>
-            <li>After translation: PZO</li>
-            <li>Shift forwards by 8: HRG</li>
-            <li>Answer: Main Page ##</li>
+            <li>After translation: SKZ</li>
+            <li>Shift backwards by 22: WOD</li>
+            <li>Answer: Main Page 23</li>
           </ul>
         </div>
         <div class="page-footer relative-footer">3</div>
@@ -308,7 +307,7 @@
             <tr>
               <td><b>22.</b><br><img src="img/Main Page/22.png" width=209px><br>BG: Broken Computer<br>HS: Normal head, old-timey body<br>FX: Multiple popups appear</td>
               <td><b>23.</b><br><img src="img/Main Page/23.png" width=209px><br>BG: Rear-View<br>HS: Normal, facing away<br>FX: Wooden circle reading "wear a bikini!" floats across, tape plays "I'm the floating head of doom!"</td>
-              <td><b>24.</b><br><img src="img/Main Page/24.png" width=209px><br>BG: Generic (has text saying "24" on module)<br>HS: Blurred shirt (not shown in image)<br>FX: Eyesight chart appears</td>
+              <td><b>24.</b><br><img src="img/Main Page/24.png" width=209px><br>BG: Generic (has text saying "24" on module)<br>HS: Blurred shirt (not shown in image)<br>FX: Notice appears requesting Flash 8 (not shown in image)</td>
             </tr>
             <tr>
               <td><b>25.</b><br><img src="img/Main Page/25.png" width=209px><br>BG: Generic (has text saying "25" on module)<br>HS: Puppet<br>FX: Yellow character walks by holding blue boombox playing music</td>
