--- a/Manual/HTML/Strong Mad Talker.html
+++ b/Manual/HTML/Strong Mad Talker.html
@@ -89,24 +89,22 @@
 
 			function orStr(numbers)
 			{
-				return
-					numbers.length === 1 ? numbers[0] :
-					`${numbers.slice(0, numbers.length-1).join(', ')} or ${numbers[numbers.length-1]}`;
+				return numbers.length === 1 ? numbers[0] : `${numbers.slice(0, numbers.length-1).join(', ')} or ${numbers[numbers.length-1]}`;
 			}
 
 			let booleanConditions = rnd.shuffleFisherYates([
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is ${['orthogonally', 'diagonally', 'orthogonally or diagonally'][rnd.next(0, 3)]} adjacent to ${w[1]} ${['looping around', 'not looping around'][rnd.next(0, 2)]}`; },
-				rnd => decideWordsForContainsRule(rnd),
+				rnd => { return decideWordsForContainsRule(rnd); },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `the serial number shares any letters with ${w[0]}`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is ${['longer than', 'shorter than', 'the same length as'][rnd.next(0, 3)]} ${w[1]}`; },
 				rnd => { let w = pickWordSelectors(rnd, false, false); return `${w[0]} has (already/not yet) been checked`; },
-				rnd => { let w = pickWordSelectors(rnd, false, true); return `${w[0]} ${['is', 'is not'][rnd.next(0, 2)]} the decoy regardless of conditions`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is in the ${['left column', 'right column', 'upper half', 'lower half'][rnd.next(0, 4)]} of this table`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${[w[0], 'any word on the module'][rnd.next(0, 2)]} is ${['at least 10 letters long', 'exactly 8 letters long', 'at most 6 letters long'][rnd.next(0, 3)]}`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is word ${orStr(rnd.shuffleFisherYates(Array(6).fill(null).map((_, c) => c+1)).slice(0, rnd.next(1, 4)))} in the checking sequence`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is in the ${['left column', 'right column', 'top row', 'middle row', 'bottom row'][rnd.next(0, 5)]} of the module`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} comes ${['before', 'after'][rnd.next(0, 2)]} ${w[1]} in alphabetical order`; },
-				rnd => `there are at least 2 lit indicators`
+				rnd => { return `there are at least 2 lit indicators`; },
+				rnd => { return `there is an empty port plate`; }
 			]);
 
 			function pickDeclaration(rnd)
@@ -131,7 +129,7 @@
 
 			function pickOrder(rnd)
 			{
-				switch (rnd.next(0, 5))
+				switch (rnd.next(0, 6))
 				{
 					case 0:
 						return `Use ${[
@@ -157,8 +155,8 @@
 						let r = rnd.shuffleFisherYates(Array(6).fill(null).map((_, c) => c + 1));
 						return `<table><tr><td>${r[0]}<${''}/td><td>${r[1]}<${''}/td><${''}/tr><tr><td>${r[2]}<${''}/td><td>${r[3]}<${''}/td><${''}/tr><tr><td>${r[4]}<${''}/td><td>${r[5]}<${''}/td><${''}/tr><${''}/table>`;
 
-					// case 5:
-					// 	return `Use the order from the word that determined the decoy. If none of the conditions were true, or the word declared itself the decoy, use normal reading order.`;
+					case 5:
+					    return `Use the order from the word that determined the decoy. If none of the conditions were true, or the word declared itself the decoy, use normal reading order.`;
 				}
 			}
 
@@ -208,30 +206,30 @@
             <tr>
 			  <td>
                 <table class='check-order'>
-                  <tr><td>1</td><td>2</td></tr>
-                  <tr><td>3</td><td>4</td></tr>
-                  <tr><td>5</td><td>6</td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
                 </table>
               </td>
 			  <td>
                 <table class='check-order'>
-                  <tr><td>1</td><td>4</td></tr>
-                  <tr><td>2</td><td>5</td></tr>
-                  <tr><td>3</td><td>6</td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
                 </table>
               </td>
 			  <td>
                 <table class='check-order'>
-                  <tr><td>3</td><td>4</td></tr>
-                  <tr><td>5</td><td>2</td></tr>
-                  <tr><td>1</td><td>6</td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
                 </table>
               </td>
 			  <td>
                 <table class='check-order'>
-                  <tr><td>3</td><td>4</td></tr>
-                  <tr><td>2</td><td>1</td></tr>
-                  <tr><td>6</td><td>5</td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
+                  <tr><td></td><td></td></tr>
                 </table>
               </td>
             </tr>
@@ -248,28 +246,28 @@
           <h3>Table 2</h3>
           <table class='table-2'>
             <tr>
-              <td><strong>SWEETYCAKES</strong><div>If there are at least 2 lit indicators, the top right word is the decoy.</div></td>
-              <td><strong>PROXIMITY</strong><div>If the one-syllable word is orthogonally adjacent to this word <i>not</i> looping around, the bottom right word is the decoy.</div></td>
+              <td><strong></strong><div></div></td>
+              <td><strong></strong><div></div></td>
             </tr>
             <tr>
-              <td><strong>CHEDDAR</strong><div>If "JUICE", "CAKE", "SWEETYCAKES" or "CASSEROLE" are present, this word is the decoy.</div></td>
-              <td><strong>MOVIE</strong><div>If the serial number shares any letters with the one-syllable word, the word above "MOVIE" is the decoy (looping around).</div></td>
+              <td><strong></strong><div></div></td>
+              <td><strong></strong><div></div></td>
             </tr>
             <tr>
-              <td><strong>DOUGLAS</strong><div>If the top-left word is shorter than the bottom-right word, the word in position (the sum of the serial number's digits modulo 6) + 1 of the one-syllable word's checking order is the decoy.</div></td>
-              <td><strong>CASSEROLE</strong><div>If the word below "CASSEROLE" on the module (looping around) has already been checked, this word is the decoy.</div></td>
+              <td><strong></strong><div></div></td>
+              <td><strong></strong><div></div></td>
             </tr>
             <tr>
-              <td><strong>GARBLEDINA</strong><div>This word is the decoy.</div></td>
-              <td><strong>WORKING</strong><div>If the top-left word and bottom-left word are equal in length, the middle-left word is the decoy.</div></td>
+              <td><strong></strong><div></div></td>
+              <td><strong></strong><div></div></td>
             </tr>
             <tr>
-              <td><strong>MANTIS</strong><div>If the word opposite this word on the module is in the left column of this table, that word is the decoy.</div></td>
-              <td><strong>AROUND</strong><div>If any word on the module is at least 10 letters long, the last word checked is the decoy. If this is the first word to be checked and the above condition applies, this word is the decoy.</div></td>
+              <td><strong></strong><div></div></td>
+              <td><strong></strong><div></div></td>
             </tr>
             <tr>
-              <td><strong>DIAPER</strong><div>If this is word 3, 4 or 5, the middle-left word is the decoy.</div></td>
-              <td><strong>HORSES</strong><div>If the one-syllable word is in the left column of the module, word 4 is the decoy.</div></td>
+              <td><strong></strong><div></div></td>
+              <td><strong></strong><div></div></td>
             </tr>
           </table>
         </div>
@@ -284,36 +282,28 @@
           <h3>Table 3</h3>
           <table class='table-3'>
               <tr>
-                <td><strong>SWEETYCAKES</strong><div>Reading Order (left to right, top to bottom) <u>on module</u></div></td>
-                <td><strong>PROXIMITY</strong><div>Alphabetical Order</div></td>
+                <td><strong></strong><div></div></td>
+                <td><strong></strong><div></div></td>
               </tr>
               <tr>
-                <td><strong>CHEDDAR</strong><div>Increasing Word Length (for ties, use alphabetical order)</div></td>
-                <td><strong>MOVIE</strong><div>Clockwise on module starting from Decoy</div></td>
+                <td><strong></strong><div></div></td>
+                <td><strong></strong><div></div></td>
               </tr>
               <tr>
-                <td><strong>DOUGLAS</strong><div>Chinese Reading Order (top to bottom, right to left) <u>on table</u></div></td>
-                <td><strong>CASSEROLE</strong><div>Use the order determined by the one-syllable word.</div></td>
+                <td><strong></strong><div></div></td>
+                <td><strong></strong><div></div></td>
               </tr>
               <tr>
-                <td><strong>GARBLEDINA</strong><div>Use the order determined by the one-syllable word rearranged in the order of 2, 6, 4, 5, 3, 1.</div></td>
-                <td><strong>WORKING</strong><div>Reverse Alphabetical Order</div></td>
+                <td><strong></strong><div></div></td>
+                <td><strong></strong><div></div></td>
               </tr>
               <tr>
-                <td><strong>MANTIS</strong><div>Use the order from the word that determined the decoy. If none of the conditions were true, press the words in reading order. <b>Note that "MANTIS" is still considered the decoy in this case.</b></div></td>
-                <td><strong>AROUND</strong><div><table>
-                  <tr><td>1</td><td>2</td></tr>
-                  <tr><td>6</td><td>3</td></tr>
-                  <tr><td>5</td><td>4</td></tr>
-                </table></div></td>
+                <td><strong></strong><div></div></td>
+                <td><strong></strong><div></div></td>
               </tr>
               <tr>
-                <td><strong>DIAPER</strong><div>Increasing Word Length, then rearrange the resulting sequence in the order of 2, 1, 4, 3.</div></td>
-                <td><strong>HORSES</strong><div><table>
-                  <tr><td>5</td><td>4</td></tr>
-                  <tr><td>6</td><td>3</td></tr>
-                  <tr><td>2</td><td>1</td></tr>
-                </table></div></td>
+                <td><strong></strong><div></div></td>
+                <td><strong></strong><div></div></td>
               </tr>
           </table>
         </div>
