--- a/Manual/HTML/Strong Mad Talker.html
+++ b/Manual/HTML/Strong Mad Talker.html
@@ -92,20 +92,22 @@
 				return numbers.length === 1 ? numbers[0] : `${numbers.slice(0, numbers.length-1).join(', ')} or ${numbers[numbers.length-1]}`;
 			}
 
-			let booleanConditions = rnd.shuffleFisherYates([
+			let booleanConditions = [
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is ${['orthogonally', 'diagonally', 'orthogonally or diagonally'][rnd.next(0, 3)]} adjacent to ${w[1]} ${['looping around', 'not looping around'][rnd.next(0, 2)]}`; },
 				rnd => { return decideWordsForContainsRule(rnd); },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `the serial number shares any letters with ${w[0]}`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is ${['longer than', 'shorter than', 'the same length as'][rnd.next(0, 3)]} ${w[1]}`; },
 				rnd => { let w = pickWordSelectors(rnd, false, false); return `${w[0]} has ${['already', 'not yet'][rnd.next(0, 2)]} been checked`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is in the ${['left column', 'right column', 'upper half', 'lower half'][rnd.next(0, 4)]} of this table`; },
-				rnd => { let w = pickWordSelectors(rnd, true, true); return `${[w[0], 'any word on the module'][rnd.next(0, 2)]} is ${['at least 10 letters long', 'exactly 8 letters long', 'at most 6 letters long'][rnd.next(0, 3)]}`; },
+				rnd => { let w = pickWordSelectors(rnd, false, false); return `${[w[0], 'any word on the module'][rnd.next(0, 2)]} is ${['at least 10 letters long', 'exactly 8 letters long', 'at most 6 letters long'][rnd.next(0, 3)]}`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is word ${orStr(rnd.shuffleFisherYates(Array(6).fill(null).map((_, c) => c+1)).slice(0, rnd.next(1, 4)))} in the checking sequence`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} is in the ${['left column', 'right column', 'top row', 'middle row', 'bottom row'][rnd.next(0, 5)]} of the module`; },
 				rnd => { let w = pickWordSelectors(rnd, true, true); return `${w[0]} comes ${['before', 'after'][rnd.next(0, 2)]} ${w[1]} in alphabetical order`; },
 				rnd => { return `there are at least 2 lit indicators`; },
 				rnd => { return `there is an empty port plate`; }
-			]);
+			];
+
+			rnd.shuffleFisherYates(booleanConditions);
 
 			function pickDeclaration(rnd)
 			{
@@ -118,7 +120,7 @@
 							'sum of the serial number’s digits',
 							'number of lit indicators'
 						];
-						let edgeworkNumber = edgeworkNumbers[rnd.next(0, edgeworkNumbers.length)];
+						let edgeworkNumber = edgeworkNumbers[rnd.next(0, 2)];
 						return `the word in position (${edgeworkNumber}, modulo 6) + 1 of the checking order`;
 					case 2:
 						return `the previous word checked (or, if this is the first word being checked and the condition applies, this word)`;
