--- a/Manual/HTML/Bronco Trolleys.html
+++ b/Manual/HTML/Bronco Trolleys.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
+    <script src="js/ktane-utils.js"></script>
   </head>
   <body>
     <div class="section">
@@ -18,7 +19,7 @@
         <div class="page-content">
           <img src="img/Component/Bronco Trolleys.svg" class="diagram">
           <h2>On the Subject of Bronco Trolleys</h2>
-          <p class="flavour-text">This took less than a day to make.</p>
+          <p class="flavour-text">One can only imagine how these must taste, especially with the orange peel…</p>
           <p>A bronco trolley is Homestar Runner's favorite after-school snack. It is made by spreading peanut butter on a Triscuit, and topping it with a slice of orange. Help him make as many bronco trolleys as possible by clicking on the Triscuit, the peanut butter, and then the orange. Work fast; you've only got 45 seconds. Up to 13 finished bronco trolleys will appear on the right side as you make them.</p><p>At least 10 bronco trolleys should be made by default, but the number needed can be changed in the mod's settings to anywhere from 10 to 15.</p>
         </div>
         <div class="page-footer relative-footer">Page 1 of 1</div>
