--- a/Manual/HTML/Sid Hoffrenchman.html
+++ b/Manual/HTML/Sid Hoffrenchman.html
@@ -2,24 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sid Hoffrenchman — Keep Talking and Nobody Explodes Module</title>
     <meta name="viewport" content="initial-scale=1">
+    <title>Sid Hoffrenchman — Keep Talking and Nobody Explodes Module</title>
+    <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/font.css">
     <script src="js/ktane-utils.js"></script>
     <script src="js/ruleseed.js"></script>
-    <script src="js/jquery.3.7.0.min.js"></script>
     <script>
-      var marzipan = '<img src="img/Sid Hoffrenchman/marzipan.png" height="128px"><br>Marzipan (purple)';
-      var strongbad = '<img src="img/Sid Hoffrenchman/strongbad.png" height="128px"><br>Strong Bad (tan)';
-      var coachz = '<img src="img/Sid Hoffrenchman/coachz.png" height="128px"><br>Coach Z (green)';
-      var kot = '<img src="img/Sid Hoffrenchman/kot.png" height="128px"><br>The King of Town (red)';
-      var homsar = '<img src="img/Sid Hoffrenchman/homsar.png" height="128px"><br>Homsar (blue)';
-      var pompom = '<img src="img/Sid Hoffrenchman/pompom.png" height="128px"><br>Pom Pom (yellow)';
-      var strongmad = '<img src="img/Sid Hoffrenchman/strongmad.png" height="128px"><br>Strong Mad<br>(dark blue)';
-      var bubs = '<img src="img/Sid Hoffrenchman/bubs.png" height="128px"><br>Bubs (orange)';
-      var strongsad = '<img src="img/Sid Hoffrenchman/strongsad.png" height="128px"><br>Strong Sad (gray)';
+      var marzipan = '<img src="img/Sid Hoffrenchman/marzipan.png" height="128"><br>Marzipan (purple)';
+      var strongbad = '<img src="img/Sid Hoffrenchman/strongbad.png" height="128"><br>Strong Bad (tan)';
+      var coachz = '<img src="img/Sid Hoffrenchman/coachz.png" height="128"><br>Coach Z (green)';
+      var kot = '<img src="img/Sid Hoffrenchman/kot.png" height="128"><br>The King of Town (red)';
+      var homsar = '<img src="img/Sid Hoffrenchman/homsar.png" height="128"><br>Homsar (blue)';
+      var pompom = '<img src="img/Sid Hoffrenchman/pompom.png" height="128"><br>Pom Pom (yellow)';
+      var strongmad = '<img src="img/Sid Hoffrenchman/strongmad.png" height="128"><br>Strong Mad<br>(dark blue)';
+      var bubs = '<img src="img/Sid Hoffrenchman/bubs.png" height="128"><br>Bubs (orange)';
+      var strongsad = '<img src="img/Sid Hoffrenchman/strongsad.png" height="128"><br>Strong Sad (gray)';
       var thecheat = '<img src="img/Sid Hoffrenchman/thecheat.png" height="70px"><br>The Cheat (gold)';
       var tiebreaker = "Submit Sid Hoffman if the current score (the white number in the top left corner) is even, and Sid Frenchman if it is odd.";
       var defaultorder = [marzipan, strongbad, coachz, kot, homsar, pompom, strongmad, bubs, strongsad, thecheat];
@@ -84,11 +83,11 @@
               <th colspan="5">Sid Hoffman</th>
               </tr>
               <tr style="vertical-align:bottom">
-                <td><img src="img/Sid Hoffrenchman/marzipan.png" height="128px"><br>Marzipan (purple)</td>
-                <td><img src="img/Sid Hoffrenchman/strongbad.png" height="128px"><br>Strong Bad (tan)</td>
-                <td><img src="img/Sid Hoffrenchman/coachz.png" height="128px"><br>Coach Z (green)</td>
-                <td><img src="img/Sid Hoffrenchman/kot.png" height="128px"><br>The King of Town (red)</td>
-                <td><img src="img/Sid Hoffrenchman/homsar.png" height="128px"><br>Homsar (blue)</td>
+                <td><img src="img/Sid Hoffrenchman/marzipan.png" height="128"><br>Marzipan (purple)</td>
+                <td><img src="img/Sid Hoffrenchman/strongbad.png" height="128"><br>Strong Bad (tan)</td>
+                <td><img src="img/Sid Hoffrenchman/coachz.png" height="128"><br>Coach Z (green)</td>
+                <td><img src="img/Sid Hoffrenchman/kot.png" height="128"><br>The King of Town (red)</td>
+                <td><img src="img/Sid Hoffrenchman/homsar.png" height="128"><br>Homsar (blue)</td>
               </tr>
             </tbody></table>
           <br>
@@ -97,11 +96,11 @@
               <th colspan="5">Sid Frenchman</th>
               </tr>
               <tr style="vertical-align:bottom">
-                <td><img src="img/Sid Hoffrenchman/pompom.png" height="128px"><br>Pom Pom (yellow)</td>
-                <td><img src="img/Sid Hoffrenchman/strongmad.png" height="128px"><br>Strong Mad<br>(dark blue)</td>
-                <td><img src="img/Sid Hoffrenchman/bubs.png" height="128px"><br>Bubs (orange)</td>
-                <td><img src="img/Sid Hoffrenchman/strongsad.png" height="128px"><br>Strong Sad (gray)</td>
-                <td><img src="img/Sid Hoffrenchman/thecheat.png" height="70px"><br>The Cheat (gold)</td>
+                <td><img src="img/Sid Hoffrenchman/pompom.png" height="128"><br>Pom Pom (yellow)</td>
+                <td><img src="img/Sid Hoffrenchman/strongmad.png" height="128"><br>Strong Mad<br>(dark blue)</td>
+                <td><img src="img/Sid Hoffrenchman/bubs.png" height="128"><br>Bubs (orange)</td>
+                <td><img src="img/Sid Hoffrenchman/strongsad.png" height="128"><br>Strong Sad (gray)</td>
+                <td><img src="img/Sid Hoffrenchman/thecheat.png" height="70"><br>The Cheat (gold)</td>
               </tr>
             </tbody></table>
           <h3>Tiebreaker</h3>
