i think i fixed the manuals

--- a/Manual/HTML/Sid Hoffrenchman.html
+++ b/Manual/HTML/Sid Hoffrenchman.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/ktane-utils.js"></script>
     <script src="js/ruleseed.js"></script>
+    <script src="js/jquery.3.7.0.min.js"></script>
     <script>
       var marzipan = '<img src="img/Sid Hoffrenchman/marzipan.png" height="128"><br>Marzipan (purple)';
       var strongbad = '<img src="img/Sid Hoffrenchman/strongbad.png" height="128"><br>Strong Bad (tan)';
