Fix Sbemail Songs' component highlight, clarify things in Strong Mad Talker's manual

--- a/Manual/HTML/Strong Mad Talker.html
+++ b/Manual/HTML/Strong Mad Talker.html
@@ -197,6 +197,7 @@
           <p class="flavour-text">SOLVE THE BOMB!!!! <b>SOLVE THE BOMB!!!!!!!</b></p>
           <p>This module will appear with six words, a Playing/Solving toggle and Strong Mad in the center. When in Playing mode, all buttons are free to be pressed without consequence. When in Solving mode, they must be pressed in a specific order that includes only four of the six buttons. A star will appear along the bottom of the module for each correct word, being cleared if an incorrect word is pressed or the module is changed to Playing mode.</p>
           <p>One of the words will have only one syllable, and another will be a decoy excluded from the correct sequence. The decoy serves to determine the order in which the other four words should be pressed. The word with one syllable determines the order in which to check each word, given by Table 1. Use Table 2 to check the condition for the word in the position labeled 1, then in the position labeled 2, and continue until a true condition is reached that declares the decoy. Skip over the one-syllable word during this process. If the word declared as the decoy is the one-syllable word, or if none of the conditions are true, the decoy is the word horizontally adjacent to the one-syllable word. Once the decoy has been found, use its corresponding entry in Table 3 to determine the order to press the remaining words.</p>
+          <p>Reading order is left to right, top to bottom. Geometric reading order is right to left, bottom to top. Chinese reading order is top to bottom, right to left.</p>
           <h3>Table 1</h3>
           <table class='table-1'>
             <tr>
@@ -246,7 +247,7 @@
         </div>
         <div class="page-content">
           <h3>Table 2</h3>
-          <p>If a position relative to "this word" is mentioned, looping around is allowed unless stated otherwise. The "previous word checked" can be the one-syllable word.</p>
+          <p>If a position relative to "this word" is mentioned, looping around is allowed unless stated otherwise. The "previous word checked" can be the one-syllable word. The words that have "been checked" will not include the word currently being checked.</p>
           <table class='table-2'>
             <tr>
               <td><strong></strong><div></div></td>
